--- a/notebooks/cot_parsing_dev.ipynb
+++ b/notebooks/cot_parsing_dev.ipynb
@@ -55,7 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ModelChoice = Literal[\"gpt-4o\", \"deepseek\"]\n",
     "\n",
     "model_choice: ModelChoice = \"gpt-4o\"\n",
@@ -160,7 +159,7 @@
     "                    \"problem_name\": problem_name,\n",
     "                }\n",
     "            )\n",
-    "            break\n"
+    "            break"
    ]
   },
   {
@@ -197,8 +196,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def format_codecontests_row_sft(row: dict) -> Sequence[ChatCompletionMessageParam]:\n",
     "    problem, code, thoughts = row[\"problem\"], row[\"code\"], row[\"thoughts\"]\n",
     "\n",
@@ -246,7 +243,9 @@
    "outputs": [],
    "source": [
     "display(out_rows_pl)\n",
-    "out_rows_pl.write_parquet(\"codecontests_cot_sft_formatted_thoughts_conversations.parquet\")"
+    "out_rows_pl.write_parquet(\n",
+    "    \"codecontests_cot_sft_formatted_thoughts_conversations.parquet\"\n",
+    ")"
    ]
   },
   {
@@ -255,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openo1_sft = load_dataset(\"O1-OPEN/OpenO1-SFT\")['train']"
+    "openo1_sft = load_dataset(\"O1-OPEN/OpenO1-SFT\")[\"train\"]"
    ]
   },
   {
@@ -364,7 +363,7 @@
    "source": [
     "# DPO\n",
     "\n",
-    "dpo_dataset = load_dataset(\"jondurbin/py-dpo-v0.1\")['train']\n",
+    "dpo_dataset = load_dataset(\"jondurbin/py-dpo-v0.1\")[\"train\"]\n",
     "dpo_dataset_pl = dpo_dataset.to_polars()"
    ]
   },
