--- a/notebooks/script_parsing_dev.ipynb
+++ b/notebooks/script_parsing_dev.ipynb
@@ -16,7 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "sys.path.append('..')\n",
+    "sys.path.append(\"..\")\n",
     "from synthetic_data.screenplay_parser import ScreenplayParser\n",
     "\n",
     "%load_ext autoreload\n",
@@ -43,7 +43,7 @@
    "source": [
     "for i in range(10):\n",
     "    display(Markdown(f\"## {scripts_pqt[i]['Movie'][0]}\"))\n",
-    "    print(scripts_pqt[i]['Script'][0][0:1000])"
+    "    print(scripts_pqt[i][\"Script\"][0][0:1000])"
    ]
   },
   {
@@ -52,13 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "scene_counts, char_line_counts = [], []\n",
     "i, n_failed = 0, 0\n",
     "good_scripts = []\n",
     "for row in tqdm(scripts_pqt.iter_rows(named=True)):\n",
     "    i += 1\n",
-    "    parser = ScreenplayParser(row['Script'])\n",
+    "    parser = ScreenplayParser(row[\"Script\"])\n",
     "    scenes = parser.parse()\n",
     "    n_chars, n_chars_with_lines = len(scenes), len(parser.character_line_counts)\n",
     "    scene_counts.append(n_chars)\n",
@@ -87,15 +86,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "scene_counts_np = pl.Series(\"char_counts\", scene_counts).to_numpy()\n",
     "char_line_counts_np = pl.Series(\"char_line_counts\", char_line_counts).to_numpy()\n",
     "\n",
     "pcts = [40, 50, 60]\n",
     "print(pcts)\n",
-    "scene_ct_pcts = np.percentile(\n",
-    "    scene_counts_np, pcts\n",
-    ")\n",
+    "scene_ct_pcts = np.percentile(scene_counts_np, pcts)\n",
     "char_ct_pcts = np.percentile(char_line_counts_np, pcts)\n",
     "\n",
     "print(f\"char_cpts: {char_ct_pcts} scene_ct_percentiles: {scene_ct_pcts}\")\n",
@@ -151,20 +147,24 @@
    ],
    "source": [
     "from openai.types.chat.chat_completion_message_param import ChatCompletionMessageParam\n",
+    "\n",
     "summarized_scenes = pl.read_parquet(\"../screenplay_scenes_summarized_full.parquet\")\n",
     "formatted_samples = []\n",
     "for sample in tqdm(summarized_scenes.iter_rows(named=True)):\n",
-    "    scene: str = sample['scene']\n",
-    "    summary: str = sample['summary']\n",
-    "    name: str = sample['name']\n",
+    "    scene: str = sample[\"scene\"]\n",
+    "    summary: str = sample[\"summary\"]\n",
+    "    name: str = sample[\"name\"]\n",
     "    if len(scene.split(\"\\n\")) < 10:\n",
     "        continue\n",
     "    conversation: list[ChatCompletionMessageParam] = [\n",
-    "        {\"role\": \"system\", \"content\": \"You are an expert AI screenwriter. Your task is to take a user provided summary of a scene and generate a screenplay scene based on it.\"},\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"You are an expert AI screenwriter. Your task is to take a user provided summary of a scene and generate a screenplay scene based on it.\",\n",
+    "        },\n",
     "        {\"role\": \"user\", \"content\": f\"<summary>{summary}</summary>\"},\n",
     "        {\"role\": \"assistant\", \"content\": f\"<scene>{scene}</scene>\"},\n",
     "    ]\n",
-    "    formatted_samples.append({\"conversation\" : conversation, \"name\": name})\n",
+    "    formatted_samples.append({\"conversation\": conversation, \"name\": name})\n",
     "\n",
     "formatted_samples_pqt = pl.DataFrame(formatted_samples)\n",
     "formatted_samples_pqt.write_parquet(\"screenplay_scenes_chat_fomrat.parquet\")"
